v2: Fixed missing background image; Fixed GGG linkflair border radius

--- a/theme/development/scss/poev2.scss
+++ b/theme/development/scss/poev2.scss
@@ -4183,7 +4183,7 @@ body.comments-page > .content {
 }
 
 .pageNavigator {
-	background: no-repeat -156px -160px;
+	background: $url_spritesheet no-repeat -156px -160px;
 	display: block;
 	height: 42px;
 	width: 20px;
@@ -5281,7 +5281,7 @@ span {
 .link.linkflair-ggg {
 	$borderSize : 5px;
 	border-left: $borderSize solid $border_color_33;
-	border-radius: $borderSize -1;
+	border-radius: ($borderSize - 1);
 	margin-left: -$borderSize;
 }
 
